--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/public/image/background.jpg');
+  background-image: url('/image/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,7 +13,7 @@ body {
 }
 
 .bg-custom-pattern {
-  background-image: url('/public/image/background.jpg');
+  background-image: url('/image/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
