--- a/src/Components/photo/photo.css
+++ b/src/Components/photo/photo.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
 
-.navbar-background {
-  background-color: #3c543d;
+.Photo-background {
+  background-color: rgb(209 213 219);
   font-family: 'Poppins', sans-serif;
 }
